# teradata-mcp-server

./: .env.example  README.md  pyproject.toml
src/core/: config.py  connection.py
src/server/: teradata_mcp_server.py
src/tools/: base.py
