[project]
name = "teradata-mcp-server"
version = "0.1.0"
description = "Servidor MCP para Teradata — consultas SQL via Claude"
requires-python = ">=3.11"

dependencies = [
    "fastmcp>=3.2.0",
    "sqlalchemy>=2.0.0,<3.0.0",
    "teradatasqlalchemy>=20.0.0.0",
    "pydantic>=2.8.0,<3.0.0",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.0.0",
]

[project.scripts]
teradata-mcp-server = "server.teradata_mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/core", "src/tools", "src/server"]

[tool.hatch.build.targets.sdist]
include = ["src/"]
